SIVA-738 Fix NPE when ContainerMimetypeFileException happens